--- a/src/app/hosting/add-vehicle/form-rules/form-rules.component.html
+++ b/src/app/hosting/add-vehicle/form-rules/form-rules.component.html
@@ -1,3 +1,15 @@
 <div class="container text-center">
-        <button mat-button matStepperPrevious>Back</button>
+    <div class="row">
+        <div class="col-6 conditions">
+            
+            <mat-checkbox color="primary">Съгласен/на съм</mat-checkbox>
+        </div>
+
+        <div class="col-6 price">
+            Цена на автомобила за ден: <input type="text" name="" id="">
+        </div>
+
     </div>
+
+    <button mat-button matStepperPrevious>Back</button>
+</div>
