--- a/src/app/vehicles/cars-list/cars-list-item/cars-list-item.component.html
+++ b/src/app/vehicles/cars-list/cars-list-item/cars-list-item.component.html
@@ -1,6 +1,6 @@
 <div class="car-card" [routerLink]="[car.id]">
     <div class="car-price">
-        $$/ден
+        <i class="fas fa-tag"></i><span class="h5">{{ car.price }}лв</span>/ден
     </div>
     <div class="car-fav">
         <i class="far fa-heart"></i>
