--- a/src/app/home/homepage/homepage.component.scss
+++ b/src/app/home/homepage/homepage.component.scss
@@ -11,8 +11,8 @@
     position: relative;
     top: 50%;
     transform: translateY(-50%);
-    height: 500px;
-    width: 500px;
+    // height: 400px;
+    // width: 400px;
     background-color: rgba(245, 243, 239, 0.87);
     box-shadow: 0 0 15px;
 }
