--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -18,19 +18,31 @@
           <a class="nav-link" [routerLink]="['cars']" routerLinkActive="active">Всички коли
           </a>
         </li>
-        <li class="nav-item waves-light" mdbWavesEffect>
+        <!-- <li class="nav-item waves-light" mdbWavesEffect>
           <a class="nav-link" (click)="printInfo()">Test</a>
-        </li>
+        </li> -->
       </ul>
       
-      <ul class="navbar-nav ml-auto" *ngIf="currentUser">
+      <!-- <ul class="navbar-nav ml-auto" *ngIf="currentUser && loggedIn()">
         <li class="nav-item waves-light" mdbWavesEffect *ngIf="currentUser.cars_owned.length>0">
           <a class="nav-link" [routerLink]="['host/add-new']">Добави кола</a>
         </li>
         <li class="nav-item waves-light" mdbWavesEffect *ngIf="currentUser.cars_owned.length>0">
           <a class="nav-link" [routerLink]="['host/manage-cars']">Моите коли</a>
         </li>
-      </ul>
+      </ul> -->
+      <ul class="navbar-nav ml-auto" *ngIf="currentUser && loggedIn()">  
+          <div class="btn-group nav-item" dropdown>
+            <a id="button-basic" dropdownToggle aria-controls="dropdown-basic" type="button" class="nav-link dropdown-toggle waves-light" mdbWavesEffect>
+              Хостинг
+            </a>
+            <ul id="dropdown-basic" *dropdownMenu class="dropdown-menu" role="menu" aria-labelledby="button-basic">
+                <li role="menuitem"><a class="dropdown-item" [routerLink]="['host/add-new']"><i class="fas fa-plus"></i> Добави кола</a></li>
+                <li role="menuitem"><a class="dropdown-item" [routerLink]="['host/manage-cars']"><mdb-icon fas icon="cog"></mdb-icon> Моите коли</a></li>
+                <!-- <li role="menuitem"><a class="dropdown-item" [routerLink]="['login']" (click)="authService.logoutUser()"><i class="fas fa-sign-out-alt"></i><span class="text-right"> Log Out</span></a></li> -->
+            </ul>
+          </div>  
+        </ul>
 
       <ul class="navbar-nav ml-auto" *ngIf="!loggedIn()">
         <li class="nav-item waves-light" mdbWavesEffect>
@@ -38,7 +50,7 @@
       </li>
       </ul>
       
-      <ul class="navbar-nav ml-auto" *ngIf="currentUser">  
+      <ul class="navbar-nav ml-auto" *ngIf="currentUser && loggedIn()">  
         <div class="btn-group nav-item" dropdown>
           <a id="button-basic" dropdownToggle aria-controls="dropdown-basic" type="button" class="nav-link dropdown-toggle waves-light" mdbWavesEffect>
             <img class="profile-pic" [src]="currentUser.photo" alt="">
