--- a/src/app/authentication/login/login.component.html
+++ b/src/app/authentication/login/login.component.html
@@ -4,7 +4,7 @@
         <input [(ngModel)]="registeredUserData.username" name="username" type="text" placeholder="name"/>
         <input [(ngModel)]="registeredUserData.password" name="password" type="password" placeholder="password"/>
         <button (click)="loginUser()">login</button>
-        <p class="message">Not registered? <a href="#">Create an account</a></p>
+        <p class="message">Not registered? <a [routerLink]="'/register/'">Create an account</a></p>
       </form>
     </div>
   </div>
