--- a/src/app/authentication/registration/registration.component.html
+++ b/src/app/authentication/registration/registration.component.html
@@ -1,44 +1,67 @@
 <div class="container">
 	<div class="register-form">
+		<div class="modal-header">
+			<!-- <h4 class="modal-title pull-left">Modal</h4> -->
+			<button type="button" class="close pull-right" aria-label="Close" (click)="bsModalRef.hide()">
+				<span aria-hidden="true">&times;</span>
+			</button>
+		</div>
+
 		<form class="form-fields row" [formGroup]="registerForm">
+			<div class="text-center col-12">
+				<h1>Създайте вашият профил</h1>
+				<h5>Възползвайте се максимално от нашите услуги</h5>
+				<hr>
+			</div>
+
+
 			<mat-form-field class="col-6">
 				<input type="text" placeholder="Потребителско име" matInput formControlName="username" required>
-				<mat-error>Моля въведете потребителско име</mat-error>
+				<mat-error *ngIf="registerForm.hasError('required', 'username')">Моля въведете потребителско име
+				</mat-error>
+				<mat-error *ngIf="registerForm.hasError('usernameTaken', 'username')">Потребителското име е заето
+				</mat-error>
 			</mat-form-field>
 			<mat-form-field class="col-6">
-				<input type="email" placeholder="E-mail" matInput formControlName="email" required/>
+				<input type="email" placeholder="E-mail" matInput formControlName="email" required />
 				<!-- <mat-error *ngIf="registerForm.controls.email.errors">
 					<span *ngIf="registerForm.controls.email.errors.required">Моля въведете вашият e-mail</span>
 					<span *ngIf="registerForm.controls.email.errors.email">Посоченият e-mail е невалиден</span>
 				</mat-error> -->
-				<mat-error *ngIf="registerForm.hasError('required', 'email')">Моля въведете вашият e-mail
-				</mat-error>
+				<mat-error *ngIf="registerForm.hasError('emailTaken', 'email')">Посоченият e-mail е зает</mat-error>
+				<mat-error *ngIf="registerForm.hasError('required', 'email')">Моля въведете вашият e-mail</mat-error>
 				<mat-error *ngIf="registerForm.hasError('email', 'email')">Посоченият e-mail е невалиден</mat-error>
 			</mat-form-field>
 			<mat-form-field class="col-6">
-				<input type="text" placeholder="Име" matInput formControlName="firstName" required/>
+				<input type="text" placeholder="Име" matInput formControlName="firstName" required />
 				<mat-error>Моля въведете вашето име</mat-error>
+				<!-- <mat-error *ngIf="registerForm.hasError('required', 'firstName')">Посоченият e-mail е невалиден</mat-error>				 -->
+				<!-- <mat-error *ngIf="registerForm.hasError('name', 'firstName')">Посоченият e-mail е невалиден</mat-error> -->
 			</mat-form-field>
 			<mat-form-field class="col-6">
-				<input type="text" placeholder="Фамилия" matInput formControlName="lastName" required/>
+				<input type="text" placeholder="Фамилия" matInput formControlName="lastName" required />
 				<mat-error>Моля въведете вашата фамилия</mat-error>
 			</mat-form-field>
 			<mat-form-field class="col-6">
 				<input type="password" placeholder="Парола" matInput formControlName="password" required>
 				<mat-error *ngIf="registerForm.hasError('required', 'password')">Моля въведете парола</mat-error>
-				<mat-error *ngIf="registerForm.hasError('minlength', 'password')">над 6 символа плс</mat-error>
+				<!-- <mat-error *ngIf="registerForm.hasError('minlength', 'password')">Паролата трябва да бъде минимум 8 символа</mat-error> -->
+				<mat-error *ngIf="registerForm.hasError('pattern', 'password')">Паролата трябва да бъде минимум 8
+					символа и да съдържа поне: 1 главна буква, 1 малка буква, 1 цифра, 1 специален символ</mat-error>
 			</mat-form-field>
 			<mat-form-field class="col-6">
-				<input type="password" placeholder="Потвърдете паролата" matInput formControlName="confirmPassword" required>
+				<input type="password" placeholder="Потвърдете паролата" matInput formControlName="confirmPassword"
+					required>
 				<mat-error *ngIf="registerForm.hasError('required', 'confirmPassword')">Потвърдете паролата</mat-error>
-				<mat-error *ngIf="registerForm.hasError('mustMatch', 'confirmPassword')">Паролите не съвпадат!</mat-error>
+				<mat-error *ngIf="registerForm.hasError('mustMatch', 'confirmPassword')">Паролите не съвпадат!
+				</mat-error>
 			</mat-form-field>
 		</form>
 		<div class="text-center">
-			<button class="search-btn" type="button" mdbBtn gradient="blue" size="lg" mdbWavesEffect (click)="registerUser()"
-			[disabled]="registerForm.invalid">Регистрация</button>
+			<button class="search-btn" type="button" mdbBtn gradient="blue" size="lg" mdbWavesEffect
+				(click)="registerUser()" [disabled]="registerForm.invalid">Регистрация</button>
 			<p class="message">Имате профил? <a [routerLink]="'/login/'">Логнете се тук</a></p>
 		</div>
-		<!-- <button (click)="printInfo()">Print</button> -->
+		<button (click)="printInfo()">Print</button>
 	</div>
 </div>
