--- a/src/app/shared/navbar/navbar.component.scss
+++ b/src/app/shared/navbar/navbar.component.scss
@@ -32,6 +32,10 @@
     }
 }
 
+// ::ng-deep .dropdown-menu{
+//     width: 100px !important;
+// }
+
 ::ng-deep .dropdown-item:hover{
     background-color: rgba(211, 211, 211, 0.746);
 }
