--- a/src/app/authentication/registration/registration.component.html
+++ b/src/app/authentication/registration/registration.component.html
@@ -1,14 +1,14 @@
 <div class="container">
 	<div class="register-form">
-		<div class="modal-header">
-			<!-- <h4 class="modal-title pull-left">Modal</h4> -->
+		<!-- <div class="modal-header">
+			<h4 class="modal-title pull-left">Modal</h4>
 			<button type="button" class="close pull-right" aria-label="Close" (click)="bsModalRef.hide()">
 				<span aria-hidden="true">&times;</span>
 			</button>
-		</div>
+		</div> -->
 
-		<form class="form-fields row" [formGroup]="registerForm">
-			<div class="text-center col-12">
+		<form class="form-fields row" [formGroup]="registerForm" (keyup.enter)="registerUser()" >
+			<div class="text-center col-12 mt-2">
 				<h1>Създайте вашият профил</h1>
 				<h5>Възползвайте се максимално от нашите услуги</h5>
 				<hr>
@@ -17,7 +17,7 @@
 
 			<mat-form-field class="col-6">
 				<input type="text" placeholder="Потребителско име" matInput formControlName="username" required>
-				<mat-error *ngIf="registerForm.hasError('required', 'username')">Моля въведете потребителско име
+				<mat-error *ngIf="registerForm.hasError('required', 'username')">Въведете потребителско име
 				</mat-error>
 				<mat-error *ngIf="registerForm.hasError('usernameTaken', 'username')">Потребителското име е заето
 				</mat-error>
@@ -29,7 +29,7 @@
 					<span *ngIf="registerForm.controls.email.errors.email">Посоченият e-mail е невалиден</span>
 				</mat-error> -->
 				<mat-error *ngIf="registerForm.hasError('emailTaken', 'email')">Посоченият e-mail е зает</mat-error>
-				<mat-error *ngIf="registerForm.hasError('required', 'email')">Моля въведете вашият e-mail</mat-error>
+				<mat-error *ngIf="registerForm.hasError('required', 'email')">Въведете вашият e-mail</mat-error>
 				<mat-error *ngIf="registerForm.hasError('email', 'email')">Посоченият e-mail е невалиден</mat-error>
 			</mat-form-field>
 			<mat-form-field class="col-6">
@@ -60,8 +60,8 @@
 		<div class="text-center">
 			<button class="search-btn" type="button" mdbBtn gradient="blue" size="lg" mdbWavesEffect
 				(click)="registerUser()" [disabled]="registerForm.invalid">Регистрация</button>
-			<p class="message">Имате профил? <a [routerLink]="'/login/'">Логнете се тук</a></p>
+			<!-- <p class="message">Имате профил? <a (click)="goToLogin()">Логнете се тук</a></p> -->
 		</div>
-		<button (click)="printInfo()">Print</button>
+		<!-- <button (click)="printInfo()">Print</button> -->
 	</div>
 </div>
