--- a/src/app/authentication/registration/registration.component.scss
+++ b/src/app/authentication/registration/registration.component.scss
@@ -1,20 +1,20 @@
 .register-form{
   // border: solid 2px red;
-  background-color: rgb(240, 251, 255);
+  // background-color: rgb(240, 251, 255);
   border-radius: 6px;
   // box-shadow: 0 0 20px 0 rgb(90, 90, 90);
-  position: absolute;
-  width: 600px;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  // position: absolute;
+  // width: 600px;
+  // top: 50%;
+  // left: 50%;
+  // transform: translate(-50%, -50%);
   h5{
     color: rgb(80, 80, 80);
   }
 }
 
 .form-fields{
-  padding: 20px 40px;
+  // padding: 20px 40px;
   .col-6{
     padding: 0 20px;
   }
