--- a/src/app/hosting/add-vehicle/form-rules/form-rules.component.html
+++ b/src/app/hosting/add-vehicle/form-rules/form-rules.component.html
@@ -1,7 +1,33 @@
 <div class="container text-center">
     <div class="row">
         <div class="col-6 conditions">
-            
+            <h1>Условия за наемане</h1>
+            <div class="row">
+                <div class="col-12 mt-4 row">
+                    <h4 class="col-8 text-left">Домашни любимци</h4>
+                    <mat-radio-group color="primary" class="col-4 text-right">
+                        <mat-radio-button class="ml-2" value="true">Да</mat-radio-button>
+                        <mat-radio-button class="ml-2" value="false">Не</mat-radio-button>
+                    </mat-radio-group>
+                </div>
+
+                <div class="col-12 mt-4 row">
+                    <h4 class="col-8 text-left">Пушене в колата</h4>
+                    <mat-radio-group color="primary" class="col-4 text-right">
+                        <mat-radio-button class="ml-2" value="true">Да</mat-radio-button>
+                        <mat-radio-button class="ml-2" value="false">Не</mat-radio-button>
+                    </mat-radio-group>
+                </div>
+                <hr class="col-11 mt-4">
+                <div class="col-12 mt-4 row">
+                    <h4 class="col-10 text-left">Включени километри</h4>
+                    <input mdbInput type="text" class="form-control col-2" placeholder="км">
+                </div>
+                <div class="col-12 mt-4 row">
+                    <h4 class="col-10 text-left">Цена за км над включените</h4>
+                    <input mdbInput type="text" class="form-control col-2" placeholder="лв/км">
+                </div>
+            </div>
             <mat-checkbox color="primary">Съгласен/на съм</mat-checkbox>
         </div>
 
