--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -50,10 +50,10 @@
 
     <ul class="navbar-nav ml-auto" *ngIf="!loggedIn()">
       <li class="nav-item waves-light" mdbWavesEffect>
-        <a class="nav-link" (click)="openModalWithComponent(login)">Логин</a>
+        <a class="nav-link" (click)="openModalWithComponent(loginComponent)">Логин</a>
       </li>
       <li class="nav-item waves-light" mdbWavesEffect>
-        <a class="nav-link" (click)="openModalWithComponent(register)">Регистрация</a>
+        <a class="nav-link" (click)="openModalWithComponent(registrationComponent)">Регистрация</a>
       </li>
     </ul>
     <!-- <button type="button" class="btn btn-primary" (click)="openModalWithComponent()">Create modal with component</button> -->
