--- a/src/app/vehicles/cars-list/cars-list.component.html
+++ b/src/app/vehicles/cars-list/cars-list.component.html
@@ -6,11 +6,15 @@
             <button class="search-btn" type="button" mdbBtn gradient="blue" size="md" mdbWavesEffect (click)="searchCars()">Търси</button>
         </div>
     </div>
-    <div class="row">
+    <div class="row mb-5">
         <div *ngFor="let car of cars" class="col-6 text-center mt-4">
             <app-cars-list-item [car]="car"></app-cars-list-item>
+        </div>
+
+        <div *ngIf="noCars">
+            <h1 class="text-center">Не намерихме автомобили отговарящи на вашето търсене</h1>
         </div>
     </div>
 </div>
 
-<button (click)="print()">PRess</button>
+<!-- <button (click)="print()">PRess</button> -->
