--- a/src/app/authentication/login/login.component.html
+++ b/src/app/authentication/login/login.component.html
@@ -8,7 +8,7 @@
 
 
       <mat-form-field class="col-6">
-        <input type="text" placeholder="Потребителско име" matInput formControlName="username" required>
+        <input type="text" placeholder="Потребителско име" matInput formControlName="username" autocomplete="off" required>
         <mat-error *ngIf="loginForm.hasError('required', 'username')">Въведете потребителско име
         </mat-error>
       </mat-form-field>
