--- a/src/app/hosting/add-vehicle/form-amenities/form-amenities.component.html
+++ b/src/app/hosting/add-vehicle/form-amenities/form-amenities.component.html
@@ -21,4 +21,4 @@
     <button mat-button matStepperPrevious>Back</button>
     <button mat-button matStepperNext>Next</button>
 </div>
-<button mat-button (click)="submit()">Submit</button>
+<!-- <button mat-button (click)="submit()">Submit</button> -->
