--- a/src/app/hosting/add-vehicle/form-description/image-upload/image-upload.component.html
+++ b/src/app/hosting/add-vehicle/form-description/image-upload/image-upload.component.html
@@ -19,4 +19,4 @@
 
 <!-- <button (click)="upload()">Upload</button> -->
 
-<button mat-button (click)="progress()">PROGRESS</button>
+<!-- <button mat-button (click)="progress()">PROGRESS</button> -->
