--- a/src/app/hosting/add-vehicle/form-main/form-main.component.html
+++ b/src/app/hosting/add-vehicle/form-main/form-main.component.html
@@ -91,7 +91,7 @@
             </div>
         </div>
             
-        <button (click)="printCars()">INFO</button>
+        <!-- <button (click)="printCars()">INFO</button> -->
     </form>
     <button mat-button matStepperNext>Next</button>
 </div>
