--- a/src/app/hosting/manage-cars/manage-cars.component.html
+++ b/src/app/hosting/manage-cars/manage-cars.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-    <div class="row">
+    <div class="row mb-3">
         <div *ngFor="let car of cars" class="col-6 text-center mt-4">
             <div class="choose">
                 <div class="p-0 car-view" [routerLink]="'/cars/'+car.id">
